--- a/serial.html
+++ b/serial.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>WatchBanglaSerial</title>
+    
+    <!-- === THIS IS THE ONLY LINE ADDED === -->
+    <link rel="icon" type="image/png" href="letter-b.png">
+    
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.0/plyr.css" />
     <style>
         :root {
@@ -78,7 +82,6 @@
         #video-description { font-size: 15px; margin: 0; color: var(--text-secondary); line-height: 1.5; }
         #loader-screen { position: fixed; top: 0; left: 0; z-index: 100; width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 16px; background-color: var(--bg-color); transition: opacity 0.5s ease-out; opacity: 1; pointer-events: all; }
         #loader-screen.hidden { opacity: 0; pointer-events: none; }
-        /* FIXED: Added missing styles for loader content */
         #countdown-timer { font-size: 48px; font-weight: 700; color: var(--primary-accent); }
         #loading-text { color: var(--text-secondary); font-size: 16px; text-align: center; }
     </style>
