--- a/serial.html
+++ b/serial.html
@@ -91,6 +91,17 @@
         @keyframes number-pop { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.05); } }
         #loading-text { color: var(--text-secondary); font-size: 16px; text-align: center; }
     </style>
+
+    <!-- Microsoft Clarity Tracking Code - START -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "s6gceeg8bh");
+    </script>
+    <!-- Microsoft Clarity Tracking Code - END -->
+
 </head>
 <body>
     <div id="loader-screen" class="hidden">
