--- a/serial.html
+++ b/serial.html
@@ -168,11 +168,11 @@
             <!-- New Download Button (initially hidden) -->
             <a id="download-app-btn" href="https://raw.githubusercontent.com/BanglaSerialBD/WatchFreeSerials/main/BanglaSerial.apk" class="action-btn hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z" fill="rgba(255,255,255,1)"/></svg>
-                <span>আমাদের অ্যাপ ডাউনলোড করুন</span>
+                <span>নাটক দেখার অ্যাপ ডাউনলোড করুন</span>
             </a>
         </div>
         
-        <div id="video-info"><div id="video-title-container"></div><p id="video-description">[ আমাদের সিরিয়াল ভিডিও দেখার অ্যাপটি বর্তমানে বন্ধ আছে ]</p></div>
+        <div id="video-info"><div id="video-title-container"></div><p id="video-description">নাটক দেখার অ্যাপটি Download করুণ </p></div>
     </div>
     
     <script src="https://cdn.plyr.io/3.7.0/plyr.js"></script>
