--- a/serial.html
+++ b/serial.html
@@ -309,49 +309,49 @@
                     browser: {
                         header: 'New Serials Every Day!',
                         caption: 'Our official app provides the fastest and smoothest experience.',
-                        buttonText: 'Download The App'
+                        buttonText: 'Download Our Bangla Serial App'
                     }
                 },
                 'bn': { // For Bangladesh
                     browser: {
-                        header: 'প্রতিদিন নতুন সিরিয়াল!',
-                        caption: 'আমাদের অফিসিয়াল অ্যাপটি সবচেয়ে দ্রুত এবং মসৃণ অভিজ্ঞতা প্রদান করে।',
-                        buttonText: 'অ্যাপটি ডাউনলোড করুন'
+                        header: '🔥 প্রতিদিন নতুন সিরিয়াল দেখুন সবার আগে!📺',
+    caption: '💕আমাদের অফিসিয়াল অ্যাপে আপনার প্রিয় সিরিয়াল দেখুন একদম ঝকঝকে করে💕, সেরা অভিজ্ঞতার গ্যারান্টি! ✅',
+    buttonText: 'এখনই ডাউনলোড করুন 💕'
                     }
                 },
                 'ar': { // For Saudi Arabia, Jordan, Qatar
                     browser: {
-                        header: 'مسلسلات جديدة كل يوم!',
-                        caption: 'تطبيقنا الرسمي يوفر أسرع وأسلس تجربة.',
-                        buttonText: 'تحميل التطبيق'
+                        header: '🔥 مسلسلات جديدة كل يوم! شاهدها قبل الجميع 📺',
+    caption: '💕 استمتع بمشاهدة مسلسلاتك المفضلة بأعلى جودة وبدون تقطيع على تطبيقنا الرسمي💕، نضمن لك أفضل تجربة! ✅',
+    buttonText: 'حمّل التطبيق الآن 💕'
                     }
                 },
                 'hi': { // For India
                     browser: {
-                        header: 'हर दिन नए सीरियल!',
-                        caption: 'हमारा आधिकारिक ऐप सबसे तेज़ और सबसे सहज अनुभव प्रदान करता है।',
-                        buttonText: 'ऐप डाउनलोड करें'
+                        header: '🔥 हर दिन नए सीरियल, सबसे पहले! 📺',
+    caption: '💕हमारे ऑफिशियल ऐप पर अपने पसंदीदा सीरियल देखें, एकदम साफ़ और बिना किसी रुकावट के💕, बेहतरीन अनुभव की गारंटी! ✅',
+    buttonText: 'अभी डाउनलोड करें 💕'
                     }
                 },
                 'it': { // For Italy
                     browser: {
-                        header: 'Nuove Serie Ogni Giorno!',
-                        caption: 'La nostra app ufficiale offre l\'esperienza più veloce e fluida.',
-                        buttonText: 'Scarica l\'App'
+                        header: '🔥 Nuove Serie Ogni Giorno, guardale prima di tutti! 📺',
+    caption: '💕Guarda le tue serie preferite sulla nostra app ufficiale, in modo cristallino e senza interruzioni💕, la migliore esperienza è garantita! ✅',
+    buttonText: 'Scarica ora 💕'
                     }
                 },
                 'ms': { // For Malaysia
                     browser: {
-                        header: 'Siri Baharu Setiap Hari!',
-                        caption: 'Aplikasi rasmi kami menyediakan pengalaman yang paling pantas dan lancar.',
-                        buttonText: 'Muat Turun Aplikasi'
+                        header: '🔥 Siri Baharu Setiap Hari, tonton sebelum semua orang! 📺',
+    caption: '💕Tonton siri kegemaran anda di aplikasi rasmi kami, dengan kualiti terbaik & tanpa sekat-sekat💕, pengalaman terbaik dijamin! ✅',
+    buttonText: 'Muat Turun Sekarang 💕'
                     }
                 },
                 'ro': { // For Romania
                     browser: {
-                        header: 'Seriale Noi În Fiecare Zi!',
-                        caption: 'Aplicația noastră oficială oferă cea mai rapidă și fluidă experiență.',
-                        buttonText: 'Descărcați Aplicația'
+                        header: '🔥 Seriale Noi În Fiecare Zi, vizionează-le înaintea tuturor! 📺',
+    caption: '💕Urmărește serialele tale preferate pe aplicația noastră oficială, la calitate maximă și fără întreruperi💕, cea mai bună experiență este garantată! ✅',
+    buttonText: 'Descarcă Acum 💕'
                     }
                 }
             };
