--- a/serial.html
+++ b/serial.html
@@ -307,9 +307,9 @@
             const promoTranslations = {
                 'en': { // For America, Singapore, Africa (default)
                     browser: {
-                        header: 'New Serials Every Day!',
-                        caption: 'Our official app provides the fastest and smoothest experience.',
-                        buttonText: 'Download Our Bangla Serial App'
+                        header: '🔥 Watch New Serials Every Day!📺',
+                        caption: '💕Our official app provides the fastest and smoothest experience.✅',
+                        buttonText: 'Download Our App💕'
                     }
                 },
                 'bn': { // For Bangladesh
