--- a/serial.html
+++ b/serial.html
@@ -402,6 +402,12 @@
             }
         });
     </script>
+ <!-- ======================================================= -->
+    <!-- START: PASTE YOUR ADSTERRA CODE HERE -->
 
+    <script type='text/javascript' src='//pl27091791.profitableratecpm.com/0c/f3/97/0cf397f39dea4f873a7b9dc0237c6774.js'></script>
+
+    <!-- END: ADSTERRA CODE -->
+    <!-- ======================================================= -->
 </body>
 </html>
