--- a/serial.html
+++ b/serial.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+     <!-- START: PASTE YOUR MONETAG TAG RIGHT HERE -->
+    <meta name="monetag" content="91d5e07626b7055859975b9d6712f1e4">
+    <!-- END: MONETAG TAG -->
+    
     <!-- The title will be set dynamically -->
     <title>Loading...</title>
     <link rel="preconnect" href="https://cdn.plyr.io">
@@ -402,12 +407,7 @@
             }
         });
     </script>
- <!-- ======================================================= -->
-    <!-- START: PASTE YOUR ADSTERRA CODE HERE -->
 
-    <script type='text/javascript' src='//pl27091791.profitableratecpm.com/0c/f3/97/0cf397f39dea4f873a7b9dc0237c6774.js'></script>
-
-    <!-- END: ADSTERRA CODE -->
-    <!-- ======================================================= -->
+    
 </body>
 </html>
