--- a/serial.html
+++ b/serial.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-     <!-- START: PASTE YOUR MONETAG TAG RIGHT HERE -->
+     <!--- START: PASTE YOUR MONETAG TAG RIGHT HERE --->
     <meta name="monetag" content="91d5e07626b7055859975b9d6712f1e4">
-    <!-- END: MONETAG TAG -->
+    <!--- END: MONETAG TAG --->
     
     <!-- The title will be set dynamically -->
     <title>Loading...</title>
