--- a/serial.html
+++ b/serial.html
@@ -406,6 +406,17 @@
         });
     </script>
 
+    <!-- ======================================================= -->
+    <!-- START: ADCASH AD CODE -->
+
+    <script type="text/javascript">
+        aclib.runAutoTag({
+            zoneId: 'bzqdy6pyyz',
+        });
+    </script>
+
+    <!-- END: ADCASH AD CODE -->
+    <!-- ======================================================= -->
     
 </body>
 </html>
