--- a/serial.html
+++ b/serial.html
@@ -252,8 +252,8 @@
             // This self-contained module controls the pop-up ad logic.
             const POPUP_AD_CONFIG = {
                 // === YOUR SETTINGS HERE ===
-                imageUrl: "https://i.imgur.com/gKq1JtH.png", // <-- PLACE YOUR IMAGE URL HERE
-                redirectUrl: "https://example.com",           // <-- PLACE YOUR REDIRECT URL HERE
+                imageUrl: "https://i.imgur.com/LfibKuB.png", // <-- PLACE YOUR IMAGE URL HERE
+                redirectUrl: "https://shorturl.at/OiHDK",           // <-- PLACE YOUR REDIRECT URL HERE
                 // ==========================
                 intervalSeconds: 120,       // Show ad every 2 minutes (120 seconds).
                 displayDurationSeconds: 5   // Ad shows for 5 seconds.
